# pantheon-monitor

./: AUTHORS  README.md  meson.build  meson_options.txt
data/: application.css  io.elementary.monitor.desktop  io.elementary.monitor.gresource.xml  io.elementary.monitor.gschema.xml  meson.build
debian/: changelog  control  copyright  pantheon-monitor.install  rules  wingpanel-indicator-monitor.install  wingpanel-indicator-sensors.install
indicator/: meson.build
indicator/Resources/: Indicator.vala  Panel.vala  io.elementary.monitor.resources.gresource.xml  io.elementary.monitor.resources.gschema.xml
indicator/resources/: Indicator.vala  Panel.vala  Popover.vala  io.elementary.monitor.resources.gresource.xml  io.elementary.monitor.resources.gschema.xml  meson.build  meson0.build
indicator/sensors/: HWMonitor.vala  Indicator.vala  Popover.vala  Utils.vala  io.elementary.monitor.sensors.gresource.xml  io.elementary.monitor.sensors.gschema.xml  meson.build
meson/: post_install.py
po/: io.elementary.monitor.pot  meson.build  ru.po
src/: Constants.vala  Enums.vala  Indicator.vala  MainWindow.vala  Monitor.vala  Structs.vala  config.vala.in  meson.build
src/Dialogs/: About.vala  Preferences.vala  Smart.vala
src/Managers/: AppManager.vala  Process.vala  ProcessManager.vala
src/Models/: GenericModel.vala  ModelHelper.vala
src/Objects/: DiskDrive.vala
src/Services/: CPU.vala  Circle.vala  Disks.vala  DisksManager.vala  Memory.vala  Net.vala  ProcessManager.vala  ResourcesManager.vala  Settings.vala  Swap.vala  Uptime.vala
src/Tools/: DrawBody.vala  DrawCircle.vala  DrawCpu.vala  DrawDiskIO.vala  DrawNetCircle.vala  DrawRAM.vala  DrawSmart.vala  DrawVolume.vala
src/Utils/: Circle.vala  Format.vala
src/Views/: Disks.vala  Monitor.vala  Processes.vala  ViewWrapper.vala
src/Widgets/: About.vala  Cpu.vala  Device.vala  DiskIO.vala  Disks.vala  Headerbar.vala  Memory.vala  Monitoring.vala  Network.vala  NetworkPopover.vala  Panel.vala  Popover.vala  Preferences.vala  Process.vala  ProcessList.vala  Search.vala  Smart.vala  SmartBox.vala  Statusbar.vala  VolumeBox.vala  VolumeIter.vala  VolumesBox.vala
vapi/: libgtop-2.0.vapi
