executable(
    meson.project_name(),
    'MainWindow.vala',
    'Monitor.vala',
    'Structs.vala',
    'Managers/AppManager.vala',
    'Managers/Process.vala',
    'Managers/ProcessManager.vala',
    'Models/GenericModel.vala',
    'Models/ModelHelper.vala',
    'Services/Circle.vala',
    'Services/CPU.vala',
    'Services/Disks.vala',
    'Services/Memory.vala',
    'Services/Net.vala',
    'Services/Settings.vala',
    'Services/Swap.vala',
    'Services/Uptime.vala',
    'Tools/DrawCpu.vala',
    'Tools/DrawRAM.vala',
    'Utils/Circle.vala',
    'Utils/Format.vala',
    'Views/Monitor.vala',
    'Widgets/About.vala',
    'Widgets/Cpu.vala',
    'Widgets/Disks.vala',
    'Widgets/Headerbar.vala',
    'Widgets/Memory.vala',
    'Widgets/Network.vala',
    'Widgets/Preferences.vala',
    'Widgets/Process.vala',
    'Widgets/Statusbar.vala',
    'Widgets/VolumeIter.vala',
    'Widgets/VolumesBox.vala',
    gresource,
    c_args: c_args,
    vala_args: vala_args,
    dependencies: [
        gio_dep,
        gobject_dep,
        glib_dep,
        gtk_dep,
        granite_dep,
        bamf_dep,
        gtop_dep,
        wnck_dep,
        cairo_dep,
        udisks2_dep,
        meson.get_compiler('c').find_library('m', required : false),
        meson.get_compiler('vala').find_library('posix')
    ],
    install : true
)

if get_option('indicator')
    shared_library(
        'monitor',
        'Structs.vala',
        'Indicator.vala',
        'Widgets/Panel.vala',
        'Widgets/Popover.vala',
        'Services/CPU.vala',
        'Services/Disks.vala',
        'Services/Memory.vala',
        'Services/Net.vala',
        'Services/Settings.vala',
        'Services/Swap.vala',
        'Services/Uptime.vala',
        'Utils/Format.vala',
        gresource,
        dependencies: [
            gio_dep,
            gobject_dep,
            glib_dep,
            gio_unix_dep,
            gtk_dep,
            gee_dep,
            gtop_dep,
            udisks2_dep,
            wingpanel_dep,
            meson.get_compiler('vala').find_library('posix')
        ],
        vala_args: vala_args,
        link_args: ['-lm'],
        install: true,
        install_dir: wingpanel_dep.get_pkgconfig_variable('indicatorsdir'),
    )
endif
